# Radar_espidf

./: .clangd  CMakeLists.txt  eim_config.toml  partitions.csv  sdkconfig.defaults
.claude/: settings.local.json
build_cmake_direct/: CMakeCache.txt.tmpb2c92
build_ninja/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt.tmp5cfc6  CMakeCache.txt.tmp96ab3  CMakeCache.txt.tmpb68e6  CMakeCache.txt.tmpbc6c7  CMakeCache.txt.tmpc35a7  config.env  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  project_description.json  x509_crt_bundle.S
build_ninja/.cmake/api/v1/reply/: cache-v2-2da83c6f3aacdf37ee05.json  cmakeFiles-v1-02e634649aa35affb58e.json  codemodel-v2-b00f5da8c874c86159ca.json  directory-esp-idf-Debug-21a940f223e7de95f95d.json  directory-esp-idf.app_trace-Debug-a2380cf64e1f66a16d11.json  directory-esp-idf.app_update-Debug-ddc0aecd268af0be4c18.json  (+247 more)
build_ninja/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  build.ninja  config.env  kconfigs.in  project_description.json
build_ninja/bootloader-prefix/src/bootloader-stamp/: bootloader-source_dirinfo.txt
build_ninja/bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
build_ninja/bootloader/config/: sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_ninja/bootloader/gdbinit/: gdbinit  symbols
build_ninja/config/: sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_ninja/esp-idf/esp_system/ld/: memory.ld  sections.ld  sections.ld.in
build_ninja/gdbinit/: gdbinit  symbols
build_ninja/log/: idf_py_stdout_output_12080  idf_py_stdout_output_26716
main/: CMakeLists.txt  app_config.h  ble_manager.cpp  ble_manager.h  data_processor.cpp  data_processor.h  device_command.cpp  device_command.h  device_identity.cpp  device_identity.h  emotion_analyzer_simple.cpp  idf_component.yml  influx_manager.cpp  main.cpp  mqtt_manager.cpp  mqtt_manager.h  radar_config.h  radar_manager.cpp  radar_manager.h  radar_platform.c  radar_platform.h  radar_uart.cpp  radar_uart.h  sleep_analyzer.cpp  sleep_analyzer.h  system_state.cpp  tasks_manager.cpp  tasks_manager.h  wifi_manager.cpp  wifi_manager.h
main/include/: amp.h  app_config.h  audio_pipeline.h  emotion_analyzer_simple.h  influx_manager.h  mem_utils.h  mic.h  mqtt_manager.h  radar_config.h  system_state.h  tasks_manager.h  tcp.h  utils.h  voice_manager.h  wake_engine.h  wifi_manager.h
main/scr/: amp.c  audio_pipeline.c  ble_manager.cpp  data_processor.cpp  device_command.cpp  device_identity.cpp  emotion_analyzer_simple.cpp  influx_manager.cpp  main.cpp  mem_utils.c  mic.c  mqtt_manager.cpp  radar_manager.cpp  radar_platform.c  radar_uart.cpp  sleep_analyzer.cpp  system_state.cpp  tasks_manager.cpp  tcp.c  utils.c  voice_manager.cpp  wake_engine.c  wifi_manager.cpp
