idf_component_register(
    SRCS
        "scr/ble_manager.cpp"
        "scr/data_processor.cpp"
        "scr/device_command.cpp"
        "scr/device_identity.cpp"
        "scr/emotion_analyzer_simple.cpp"
        "scr/influx_manager.cpp"
        "scr/main.cpp"
        "scr/mqtt_manager.cpp"
        "scr/radar_manager.cpp"
        "scr/radar_platform.c"
        "scr/radar_uart.cpp"
        "scr/sleep_analyzer.cpp"
        "scr/system_state.cpp"
        "scr/tasks_manager.cpp"
        "scr/wifi_manager.cpp"
    INCLUDE_DIRS
        "."
        "include"
    REQUIRES
        bt
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_uart
        esp_event
        esp_http_client
        mqtt
        mbedtls
        esp_netif
        esp_system
        esp_wifi
        nvs_flash
)
